// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > Snapshot: Default 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;

exports[`Avatar > Snapshot: Default with disabled prop 1`] = `
<button
  class="ucl-uikit-avatar css-x8e1am"
  data-testid="ucl-uikit-avatar"
  disabled=""
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;

exports[`Avatar > Snapshot: icon variant with disabled prop 1`] = `
<button
  class="ucl-uikit-avatar css-x8e1am"
  data-testid="ucl-uikit-avatar"
  disabled=""
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;

exports[`Avatar > Snapshot: icon variant with no props 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;

exports[`Avatar > Snapshot: image variant with imageUrl and name props 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <img
    alt="John Doe"
    class="css-e7jagv"
    data-testid="ucl-uikit-avatar-image"
    src="https://www.example.com/image.jpg"
  />
</button>
`;

exports[`Avatar > Snapshot: image variant with imageUrl prop only 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <img
    alt=""
    class="css-e7jagv"
    data-testid="ucl-uikit-avatar-image"
    src="https://www.example.com/image.jpg"
  />
</button>
`;

exports[`Avatar > Snapshot: image variant with imageUrl, name and disabled props 1`] = `
<button
  class="ucl-uikit-avatar css-x8e1am"
  data-testid="ucl-uikit-avatar"
  disabled=""
>
  <img
    alt="John Doe"
    class="css-qrytbt"
    data-testid="ucl-uikit-avatar-image"
    src="https://www.example.com/image.jpg"
  />
</button>
`;

exports[`Avatar > Snapshot: image variant with name prop only 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <span
    class="css-gtnz"
  >
    JD
  </span>
</button>
`;

exports[`Avatar > Snapshot: image variant with no props 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;

exports[`Avatar > Snapshot: initials variant with name prop 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <span
    class="css-gtnz"
  >
    JD
  </span>
</button>
`;

exports[`Avatar > Snapshot: initials variant with name prop and disabled prop 1`] = `
<button
  class="ucl-uikit-avatar css-x8e1am"
  data-testid="ucl-uikit-avatar"
  disabled=""
>
  <span
    class="css-gtnz"
  >
    JD
  </span>
</button>
`;

exports[`Avatar > Snapshot: initials variant with no props 1`] = `
<button
  class="ucl-uikit-avatar css-46vibo"
  data-testid="ucl-uikit-avatar"
>
  <svg
    class="ucl-icon css-1kjizvt"
    data-testid="ucl-icon"
    fill="currentColor"
    height="24"
    stroke="none"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M4 20.9995C4.49232 17.0534 7.8586 14 11.938 14C16.0175 14 19.5077 17.0539 20 21C18 23 15 24 12 24C9 24 6 23 4 20.9995Z"
      fill-rule="evenodd"
    />
    <circle
      cx="12"
      cy="9"
      r="4"
    />
  </svg>
</button>
`;
